[package]
name = "crnlib"
version = "0.1.1"
authors = ["Clouds Flowing <clouds.flowing@gmail.com>"]
edition = "2018"
repository = "https://github.com/clouds56/crnlib/"
license-file = "license.txt"
description = "Rust port of crunch, to decode .crn file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_repr = "0.1"
bincode = "1.3"
# crc = "*"
bitvec = "0.17"
anyhow = "1.0"

[dev-dependencies]
image = ">= 0.23"
